Fix style after update
https://jira.i-novus.ru/browse/RDM-1175